--- a/res/values/jdc_strings.xml
+++ b/res/values/jdc_strings.xml
@@ -123,4 +123,30 @@
     <string name="scroll_disclaimer_summary">Note: Most apps need to be restarted for custom values to take effect</string>
     <string name="animation_settings_reset_message">Reset all animation settings to default?</string>
 
+
+    <!--Flashables-->
+    <string name="get_flashables">Get AROMA flashable packages</string>
+    <string name="supersu">SuperSU</string>
+    <string name="supersu_summary">Get the latest flashable SuperSU package</string>
+    <string name="snap">Snap Camera</string>
+    <string name="snap_summary">Get the latest flashable Snap camera</string>
+    <string name="google">Google Wallpaper and Pixel Launcher</string>
+    <string name="google_summary">Get the latest flashable Google Wallpaper and Pixel Launcher</string>
+    <string name="stockkernel">LineageOS official stock kernel</string>
+    <string name="stockkernel_summary">Get the latest flashable stock kernel for OnePlus5 devices</string>
+    <string name="stockcamera">AOSP Camera</string>
+    <string name="stockcamera_summary">Get the latest flashable AOSP Camera</string>
+    
+    <!--Ticker-->
+    <!-- Status Bar Ticker -->
+    <string name="ticker_screen_title">Ticker</string>
+    <string name="ticker_title">Status Bar Ticker</string>
+    <string name="ticker_screen_summary">Customize the ticker style</string>
+    <string name="ticker_summary">Enable the old status bar ticker</string>
+    <string name="ticker_restore_defaults_title">Restore defaults</string>
+    <string name="text_title">Text</string>
+    <string name="icon_title">Icon</string>
+    <string name="colors_title">Colors</string>
+    
+
 </resources>
