--- a/res/values/jdc_strings.xml
+++ b/res/values/jdc_strings.xml
@@ -148,5 +148,9 @@
     <string name="icon_title">Icon</string>
     <string name="colors_title">Colors</string>
     
+     <!-- Statusbar 4G LTE switch -->
+    <string name="show_fourg_title">Show 4G instead of LTE</string>
+    <string name="show_fourg_summary">Replaces LTE statusbar indicator with 4G</string>
+
 
 </resources>
